--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
-      crossorigin></script>
+    <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
