--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous" /> -->
-    <title>Vite + React + TS</title>
+    <title>Document App</title>
   </head>
   <body>
     <div id="root"></div>
